# theseus-lib-multi-segment

./: CMakeLists.txt  README.md
cmake/: theseusConfig.cmake.in
include/theseus/: alignment.h  graph.h  heuristics.h  theseus_aligner.h  theseus_msa_aligner.h
scripts/: msa_accuracy.py
tests/unit/: msa_tests.cpp  seq_to_graph_tests.cpp
theseus/: alignment.cpp  beyond_scope.h  cell.h  graph.cpp  graph.h  msa.h  scope.h  scratchpad.h  theseus_aligner.cpp  theseus_aligner_impl.cpp  theseus_aligner_impl.h  theseus_msa_aligner.cpp  vector.h  vertices_data.h
tools/: pericles.cpp  theseus_aligner.cpp  theseus_msa.cpp
